# claude-project

./: .gitignore  pyproject.toml
backend/: server.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: DownloadProgress.vue  FileList.vue  HistoryList.vue  VideoForm.vue
macos-app/: Package.swift  package.sh
macos-app/Extensions/Chrome/: background.js  manifest.json  popup.html  popup.js
macos-app/Sources/DownieClip/: APIClient.swift  BackendManager.swift  ClipboardManager.swift  DownloadStore.swift  FrameProgressBar.swift  HomeView.swift  MainApp.swift  MascotView.swift  MenuBarView.swift  NotificationManager.swift  Theme.swift  ThumbnailGenerator.swift
src/claude_project/: analyzer.py  cli.py  main.py  scraper.py  tracker.py  video_scraper.py
