[project]
name = "claude-project"
version = "0.1.0"
description = "API usage tracker and analyzer for DeepSeek & Kimi 2.5"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.scripts]
api-usage = "claude_project.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
